--- a/templates-html-server/index.html
+++ b/templates-html-server/index.html
@@ -29,8 +29,12 @@
                 <input id="input3" type="text" class="emDatetimepicker px-2 form-control" data-settings="">   
             </div>
             <div class="form-group mb-3">
-                <label>Only Time Picker</label>
+                <label>Time Range Picker</label>
                 <input id="input4" type="text" class="emDatetimepicker px-2 form-control" data-settings="">   
+            </div>       
+            <div class="form-group mb-3">
+                <label>Time Picker</label>
+                <input id="input5" type="text" class="emDatetimepicker px-2 form-control" data-settings="">   
             </div>       
         
         </div>
@@ -48,8 +52,12 @@
                 <div id="input_div_3" type="text" class="emDatetimepicker px-2 form-control" data-settings=""></div>
             </div>
             <div class="form-group mb-3">
-                <label>Only Time Picker</label>
+                <label>Time Range Picker</label>
                 <div id="input_div_4" type="text" class="emDatetimepicker px-2 form-control" data-settings=""></div>
+            </div>       
+            <div class="form-group mb-3">
+                <label>Time Picker</label>
+                <div id="input_div_5" type="text" class="emDatetimepicker px-2 form-control" data-settings=""></div>
             </div>       
         
         </div>
@@ -95,6 +103,11 @@
             // onlyTimePicker: true,
         });
         emDatetimepicker.init('#input4', {
+            rangePicker: true,
+            timePicker: true,
+            onlyTimePicker: true,
+        });
+        emDatetimepicker.init('#input4', {
             // rangePicker: true,
             timePicker: true,
             onlyTimePicker: true,
@@ -127,12 +140,20 @@
             // dispayIn: "inline_center",
         });
         emDatetimepicker.init('#input_div_4', {
-            // rangePicker: true,
+            rangePicker: true,
             timePicker: true,
             onlyTimePicker: true,
             startTime: '2:00',
             endTime: '20:00',
             // dispayIn: 'top_right',
+        });
+        emDatetimepicker.init('#input_div_5', {
+            // rangePicker: true,
+            timePicker: true,
+            onlyTimePicker: true,
+            startTime: '2:00',
+            endTime: '20:00',
+            dispayIn: 'top_left',
         });
 
 
