--- a/templates-html-server/index.html
+++ b/templates-html-server/index.html
@@ -7,7 +7,6 @@
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
-    <!-- <link rel="stylesheet" href="http://localhost:4545/assets/style.css"> -->
     <script src="http://localhost:4545/assets/em-datetimepicker.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     
@@ -77,7 +76,7 @@
             timePicker: true,
             // onlyTimePicker: true,
             theme,
-            dispayIn: 'bottom_left',
+            displayIn: 'bottom_left',
             colors: {
                 primary_bg: '#12834f',
             }
@@ -94,7 +93,7 @@
             theme,
             onlyTimePicker: true,
             timePickerUi: 'classic',
-            dispayIn: 'bottom_left',
+            displayIn: 'bottom_left',
             minuteStep: 15,  
         });
         emDatetimepicker.init('#input5', {
@@ -102,7 +101,7 @@
             rangePicker: true,
             timePicker: true,
             onlyTimePicker: true,
-            dispayIn: 'top_left',
+            displayIn: 'bottom_center',
             timePickerUi: 'default',
             minuteStep: 15,            
         });
