--- a/templates-html-server/index.html
+++ b/templates-html-server/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
     <script src="http://localhost:4545/assets/em-datetimepicker.js"></script>
+    <link rel="stylesheet" href="http://localhost:4545/assets/style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     
 
@@ -104,6 +105,7 @@
             displayIn: 'bottom_left',
             timePickerUi: 'default',
             minuteStep: 15,            
+            timePickerButton: false,            
         });
 
 
