--- a/templates-html-server/demo.html
+++ b/templates-html-server/demo.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
     <script src="http://localhost:4545/assets/em-datetimepicker.js"></script>
-    <!-- <link rel="stylesheet" href="http://localhost:4545/assets/style.css"> -->
+    <link rel="stylesheet" href="http://localhost:4545/assets/em-datetimepicker.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <style>
         body{
